--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
+    <head>
 
-<body>
-    <h1>hola mundo</h1>
-</body>
+    </head>
+    <body>
+        <h1>hola mundo</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, amet dicta minima deserunt ducimus quo accusamus ab dolorem nemo quos, qui itaque iusto nesciunt, porro perferendis expedita! Magni, sint deleniti.</p>
+    </body>
 </html>
