feat(JS):Actividad 2.1. del tema2 de DWEC resuelta

--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <html>
     <head>
-
+        <script>
+            document.write("Codigo JS dentro de HTML(Head)");
+        </script>
     </head>
     <body>
         <h1>hola mundo</h1>
+        <script>
+            document.write("Codigo JS dentro de HTML(Body)");
+        </script>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, amet dicta minima deserunt ducimus quo accusamus ab dolorem nemo quos, qui itaque iusto nesciunt, porro perferendis expedita! Magni, sint deleniti.</p>
     </body>
 </html>
